# signal

./: .gitignore  CMakeLists.txt  apperrors.c  application.c  application.h  main.c
net/: CMakeLists.txt
net/include/: connconfig.h  connection.h  net.h  neterr.h  op_result.h
net/src/: connconfig.c  net.c
net/src/internal/: config_internal.h  local_endpoint.c  local_endpoint.h  server_endpoint.c  server_endpoint.h  tcp_endpoint.c  tcp_endpoint.h
sound/: CMakeLists.txt
sound/include/: config.h  snderr.h  sound.h
sound/src/: config.c  sound.c
sound/src/internal/: types.h
util/: CMakeLists.txt
util/include/: util.h
util/src/: util.c
